# numeral-recognition

./: Cargo.toml  LICENSE  README.md  index.html  network.json
.github/workflows/: rust.yml
pkg/: .gitignore  numeral_recognition.js  numeral_recognition_bg.wasm
src/: lib.rs  main.rs
