[package]
name = "numeral-recognition"
version = "0.1.0"
authors = ["Zac Gross <brickman1444@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Use a fork of RustNN which relies on serde instead of rustc-serialize which doesn't compile for WebAssembly
[dependencies]
nn = { git = "https://github.com/FlixCoder/RustNN", rev = "4af774e92e2d357cdfd400fa620e4a69a3ab8f98" }
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bin"
path = "src/lib.rs"
